# cis194

./: hw1-creditcard.hs  hw1-hanoi.hs  hw3-codegolf.hs  hw4-balancedtree.hs  hw6-lazy.hs  readme.md
hw02-logmessages/: LogAnalysis.hs  Main.hs
hw03-codegolf/: CodeGolf.hs
hw04-higherorder/: HigherOrder.hs
hw05-calculator/: Basic.hs  Calc.hs
hw07-editor/: JoinList.hs  Scrabble.hs  Sized.hs
hw10-applicative/: AParser.hs
hw11-applicative/: SExpr.hs
hw12-monad/: Risk.cabal
hw12-monad/src/: Risk.hs
hw2-logmessages/: Log.hs
hw8-io/: Party.hs
