name:                Risk
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

executable Risk
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , MonadRandom >= 0.4.2.2